--- a/roles/agent/common/getuserinfo.yml
+++ b/roles/agent/common/getuserinfo.yml
@@ -9,21 +9,9 @@
 
 - name: Update the agent status
   when: (usernodecert.resources|length) == 0
-  block:
-  - name: Update agent status
-    operator_sdk.util.k8s_status:
-      api_version: operator.fabric.hyperledger.org/v1alpha1
-      kind: Agent
-      name: "{{ ansible_operator_meta.name }}"
-      namespace: "{{ ansible_operator_meta.namespace }}"
-      status:
-        result: 'Failed - no user cert found'
-
-  - name: Finish the process if no imported orderer found
-    meta: end_play
-
-- debug:
-    msg: "{{ node_cert }}-{{ orgid }}-nodecert"
+  include_tasks: '{{ role_path }}/common/endplay.yml'
+  vars:
+    RESULT_MSG: 'Failed - Node cert {{node_cert}} not found'
 
 - name: Search for the matching secret for the nodecert
   community.kubernetes.k8s_info:
@@ -35,18 +23,9 @@
 
 - name: Update the agent status
   when: (usersecret.resources|length) == 0
-  block:
-  - name: Update agent status
-    operator_sdk.util.k8s_status:
-      api_version: operator.fabric.hyperledger.org/v1alpha1
-      kind: Agent
-      name: "{{ ansible_operator_meta.name }}"
-      namespace: "{{ ansible_operator_meta.namespace }}"
-      status:
-        result: 'Failed, no secret found!'
-
-  - name: Finish the process if no secret found
-    meta: end_play
+  include_tasks: '{{ role_path }}/common/endplay.yml'
+  vars:
+    RESULT_MSG: 'Failed - Secret {{ node_cert }}-{{ orgid }}-nodecert not found'
 
 # lay out these certificates
 - name: Set up user msp directory
@@ -76,3 +55,21 @@
   - "{{ { 'src': 'tls.crt',     'dest': 'tls/client.crt'} }}"
   - "{{ { 'src': 'tls.key',     'dest': 'tls/client.key'} }}"
 
+- name: Create the config.yaml file
+  copy:
+    dest: "{{ agentworkdir }}/user/msp/config.yaml"
+    content: >-
+      NodeOUs:
+        Enable: true
+        ClientOUIdentifier:
+          Certificate: cacerts/ca.pem
+          OrganizationalUnitIdentifier: client
+        PeerOUIdentifier:
+          Certificate: cacerts/ca.pem
+          OrganizationalUnitIdentifier: peer
+        AdminOUIdentifier:
+          Certificate: cacerts/ca.pem
+          OrganizationalUnitIdentifier: admin
+        OrdererOUIdentifier:
+          Certificate: cacerts/ca.pem
+          OrganizationalUnitIdentifier: orderer
