--- a/roles/agent/ops/assetgen/gen-peer-asset.yml
+++ b/roles/agent/ops/assetgen/gen-peer-asset.yml
@@ -4,9 +4,9 @@
     state: 'directory'
     mode: 0775
   with_items:
-  - '{{ workdir }}/{{ orgid }}/assets'
-  - '{{ workdir }}/{{ orgid }}/assets/Peers'
-  - '{{ workdir }}/{{ orgid }}/assets/Wallets'
+  - '{{ agentworkdir }}/assets'
+  - '{{ agentworkdir }}/assets/Peers'
+  - '{{ agentworkdir }}/assets/Wallets'
 
 - name: Setup the file name
   set_fact:
@@ -23,11 +23,11 @@
 - name: Now generate the Peer asset for organization
   template:
     src: "{{ role_path }}/ops/{{ action.name }}/templates/peer.j2"
-    dest: "{{ workdir }}/{{ orgid }}/assets/Peers/{{ assetname }}.json"
+    dest: "{{ agentworkdir }}/assets/Peers/{{ assetname }}.json"
 
 - name: Now generate the msp asset for organization
   template:
     src: "{{ role_path }}/ops/{{ action.name }}/templates/wallet.j2"
-    dest: "{{ workdir }}/{{ orgid }}/assets/Wallets/Admin-{{ assetname }}.json"
+    dest: "{{ agentworkdir }}/assets/Wallets/Admin-{{ assetname }}.json"
   when: includewallets == True
 
