Fixed few errors in channel create and channel query
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/config/samples/operator_v1alpha1_agent_channelquery.yaml
+++ b/config/samples/operator_v1alpha1_agent_channelquery.yaml
@@ -4,8 +4,7 @@ metadata:
   name: agent-sample
 spec:
   organization: example.com
-  type: Admin
-  nodeCert: admin01
+  nodeCert: admin01-sample
   actions:
   - name: channelquery
     description: query channel configuration
