--- a/config/samples/operator_v1alpha1_agent_channelcreate.yaml
+++ b/config/samples/operator_v1alpha1_agent_channelcreate.yaml
@@ -4,8 +4,7 @@ metadata:
   name: agent-sample
 spec:
   organization: example.com
-  type: Admin
-  nodeCert:
+  nodeCert: admin01-sample
   actions:
   - name: channelcreate
     description: Create new channel
