--- a/config/samples/operator_v1alpha1_nodecert_user01.yaml
+++ b/config/samples/operator_v1alpha1_nodecert_user01.yaml
@@ -1,7 +1,7 @@
 apiVersion: operator.fabric.hyperledger.org/v1alpha1
 kind: Nodecert
 metadata:
-  name: user01
+  name: user01-sample
 spec:
   # Add fields here
   organization: example.com
