--- a/roles/agent/ops/channelquery/apply.yml
+++ b/roles/agent/ops/channelquery/apply.yml
@@ -56,18 +56,31 @@
   ansible.builtin.shell: |
     export FABRIC_CFG_PATH={{ agentworkdir }}/config
     export CORE_PEER_TLS_ENABLED=true
+    export CORE_PEER_LOCALMSPID={{ orgid}}
     export CORE_PEER_TLS_ROOTCERT_FILE={{ agentworkdir }}/tls/tlsca.crt
     export CORE_PEER_MSPCONFIGPATH={{ agentworkdir }}/user/msp
     export CORE_PEER_ADDRESS={{ endpoint|replace('grpcs://', '') }}
-    {{ bindir }}/bin/peer channel fetch config config_block.pg \
+    {{ bindir }}/bin/peer channel fetch config config_block.bk \
     --tls -c {{ channelName }} \
     -o {{ endpoint|replace('grpcs://', '') }} \
-    --cafile {{ agentworkdir }}/tls/ca.crt
+    --cafile {{ agentworkdir }}/tls/tlsca.crt
   args:
     chdir: '{{ agentworkdir }}'
     executable: /bin/bash
+  register: cmdresult
+  ignore_errors: yes
+
+- name: Get the pod name
+  set_fact:
+    podname: "{{ lookup('env', 'HOSTNAME') }}"
+    controllerns: "{{ lookup('file', '/var/run/secrets/kubernetes.io/serviceaccount/namespace') }}"
 
 - name: Update the resource status
   include_tasks: '{{ role_path }}/common/endplay.yml'
   vars:
-    RESULT_MSG: 'Succeeded'
+    RESULT_MSG: >-
+      {{ (cmdresult.rc == 0)|ternary('Succeeded - Channel Query', 'Failed - '+cmdresult.stderr) }}
+    DOWNLOAD_MSG: >-
+      kubectl cp -n {{ controllerns }} -c manager
+      {{ podname }}:{{ agentworkdir }}/config_block.bk
+      
