Changed how the agent parameters work
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/config/samples/operator_v1alpha1_agent_assetgen.yaml
+++ b/config/samples/operator_v1alpha1_agent_assetgen.yaml
@@ -7,9 +7,6 @@ spec:
   actions:
   - name: assetgen
     description: Generate asset file
-    params:
-    - name: assettypes
-      value: ['ca', 'orderer', 'peer']
-    - name: includewallets
-      value: no
-
+    parameters:
+      assettypes: ['ca', 'orderer', 'peer']
+      includewallets: no
