--- a/config/samples/operator_v1alpha1_agent_nodeimport.yaml
+++ b/config/samples/operator_v1alpha1_agent_nodeimport.yaml
@@ -7,6 +7,5 @@ spec:
   actions:
   - name: nodeimport
     description: import nodes and their certificates
-    params:
-    - name: assetname
-      value: assets.zip
+    parameters:
+      assetname: assets.zip
