--- a/roles/agent/ops/channelquery/apply.yml
+++ b/roles/agent/ops/channelquery/apply.yml
@@ -1,12 +1,15 @@
 # To create a new channel, an action must look like this
 #
-# - name: channelquery
+# spec:
 #   description: query channel configuration
-#   params:
-#   - name: channelName
-#     value: mychannel
-#   - name: ordererNode
-#     value: orderer-sample
+#   organization: example.com
+#   nodeCert: admin01-sample
+#   actions:
+#   - name: channelquery
+#     description: query channel configuration
+#     parameters:
+#       channelName: mychannel
+#       ordererNode: orderer-sample
 #
 # The operation will look at the orderer nodecert first, if not found
 # it will try to find node asset to get endpoint and certificates.
@@ -19,21 +22,14 @@
 
 - name: Get variable with their names
   set_fact:
-    channelName: >-
-      {{ (action.params | selectattr('name','equalto','channelName') | map(attribute='value') | list)[0] }}
-    ordererNode: >-
-      {{ (action.params | selectattr('name','equalto','ordererNode') | map(attribute='value') | list)[0] }}
+    channelName: "{{ action.parameters.channel_name }}"
+    ordererNode: "{{ action.parameters.orderer_node }}"
 
 - name: End the process if either variable is empty
   when: channelName == '' or ordererNode == ''
   include_tasks: '{{ role_path }}/common/endplay.yml'
   vars:
-    RESULT_MSG: 'Failed - Both channel name and initial orderer node must be provided'
-
-- name: Fixup the orderer name in case only the short name used
-  when: not (orgid in (ordererNode|replace('.','-')))
-  set_fact:
-    ordererNode: "{{ ordererNode|replace('.','-') }}-{{ orgid }}"
+    RESULT_MSG: 'Failed - Both channel name and orderer node must be provided'
 
 # Now we get the nodecert under which the operation is performed
 - name: Get user info
