Reset the default channel to mychannel
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/config/samples/operator_v1alpha1_agent_channelcreate.yaml
+++ b/config/samples/operator_v1alpha1_agent_channelcreate.yaml
@@ -9,5 +9,5 @@ spec:
   - name: channelcreate
     description: Create new channel
     parameters:
-      channelName: mychannel1
+      channelName: mychannel
       initialOrdererNode: orderer-sample
