Include admin cert in the msp asset generation
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/config/samples/operator_v1alpha1_agent_assetgen.yaml
+++ b/config/samples/operator_v1alpha1_agent_assetgen.yaml
@@ -8,5 +8,5 @@ spec:
   - name: assetgen
     description: Generate asset file
     parameters:
-      assettypes: ['ca', 'orderer', 'peer']
+      assettypes: ['ca', 'orderer', 'peer', 'msp']
       includewallets: no
