Allow working directory to be controlled by parameters
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/config/samples/operator_v1alpha1_agent_assetgen.yaml
+++ b/config/samples/operator_v1alpha1_agent_assetgen.yaml
@@ -4,6 +4,7 @@ metadata:
   name: agent-sample
 spec:
   organization: example.com
+  cleanup: true
   actions:
   - name: assetgen
     description: Generate asset file
